--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
 }
 
 .cert-button {
